# binocular-dense-stereo

./: .gitignore  README.md  calibration.py  main.py  out.stl  sfm_templeRing.py  test_camera_resectioning.py  test_merton.py  test_multiple_view_reconstruction.py  test_stereo_disparity.py  test_stereo_disparity2.py  test_stereo_disparity_openCV.py  test_stereo_reconstruction.py  test_triangulation.py  utils.py  vtk_test.py
MVR/: __init__.py  stereo.py
PCV/localdescriptors/: sift.py
StereoVision-master/: images_to_pointcloud
StereoVision-master/doc/: make.bat
StereoVision-master/stereovision/: stereo_cameras.py
cpp_pcl_visualization/pcl_visualization_pcd/: cloud_viewer.cpp  pcl_test.py
dataset_merton/: arec.wrl
pcl_visualization/pcl_visualization_pcd/: CMakeLists.txt  cloud_viewer.cpp
stereo_vision-master/: README.md
stereo_vision-master/res/: gui.xml
stereo_vision-master/stereo/: camera.py  config.py  gui.py  vision.py
test/: load_vggdata.py  test_epipole.py  test_merton.py  test_multiple_view_reconstruction.py  test_stereo_disparity.py  test_stereo_disparity2.py  test_stereo_disparity_openCV.py  test_triangulation.py
